syntax = "proto3";

option csharp_namespace = "Promotion.API";

package promotion;

// The coupon service definition.
service CouponProtoService {
	// Coupon CRUD Operations
	rpc GetCoupon (GetCouponRequest) returns (CouponModel);
	rpc CreateCoupon (CreateCouponRequest) returns (CouponModel);
	rpc UpdateCoupon (UpdateCouponRequest) returns (CouponModel);
	rpc DeleteCoupon (DeleteCouponRequest) returns (DeleteCouponResponse);
}

message GetCouponRequest {
	string productId = 1;
}

message CouponModel {
	int32 id = 1;
	string productId = 2;
	string description = 3;
	int32 amount = 4;
	string couponType = 5;
}

message CreateCouponRequest {
	CouponModel coupon = 1;
}

message UpdateCouponRequest {
	CouponModel coupon = 1;
}

message DeleteCouponRequest {
	string productId = 1;
}

message DeleteCouponResponse {
	bool success = 1;
}